Tried to add menu, need to revisit

--- a/macecv.kv
+++ b/macecv.kv
@@ -1,6 +1,9 @@
+# #:import menu menu
+
 AppLayout:
 
 <AppLayout>:
+#    menu_widget: menu_widget
     orientation: "vertical"
     BoxLayout:
         orientations: "horizontal"
@@ -19,4 +22,6 @@ AppLayout:
         Button:
             text: "Start/Stop"
         Button:
-            text: "Reset"
+            text: "Reset"    
+#    MenuWidget:
+#        id: menu_widget
