Moved widgets to py file, added webcam

--- a/macecv.kv
+++ b/macecv.kv
@@ -1,27 +1,1 @@
-# #:import menu menu
-
-AppLayout:
-
-<AppLayout>:
-#    menu_widget: menu_widget
-    orientation: "vertical"
-    BoxLayout:
-        orientations: "horizontal"
-        size_hint: 1, 0.2
-        Label:
-            text: "PROB\n0.74"
-        Label:
-            text: "CLASS\nSwing"
-        Label:
-            text: "REPS\n0"
-    Button:
-        text: "Webcam feed here"
-    BoxLayout:
-        orientation: "horizontal"
-        size_hint: 1, 0.2
-        Button:
-            text: "Start/Stop"
-        Button:
-            text: "Reset"    
-#    MenuWidget:
-#        id: menu_widget
+# just build it all in the python file, I guess?
