--- a/macecv.kv
+++ b/macecv.kv
@@ -1,1 +1,8 @@
 # just build it all in the python file, I guess?
+
+WindowManager:
+    FirstWindow:
+    SecondWindow:
+
+<FirstWindow>:
+    name: "first"
