--- a/macecv.kv
+++ b/macecv.kv
@@ -1,8 +1,1 @@
-# just build it all in the python file, I guess?
-
-WindowManager:
-    FirstWindow:
-    SecondWindow:
-
-<FirstWindow>:
-    name: "first"
+# Currently unused - everything is built in python app file
